--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "openai": "^6.9.0",
+    "groq-sdk": "^0.5.0",
     "prisma": "^6.19.0"
   },
   "devDependencies": {
